# Witchcrafted

./: .gitignore  README.md  README.rst  pyproject.toml  settings.yaml  test.mdmod
.github/workflows/: ci.yml
assets/: card_list.csv
icon/: icon.xcf
tests/: test_witchcrafted.py
view/: file_dialogs.kv  project_view.kv  settings.json  witchcrafted.kv
witchcrafted/: __init__.py  cards.py  dialogs.py  imagehash.py  main.py  main_panel.py  scrollable.py  settings.py  setup.py  utils.py  witchcrafted.ini
witchcrafted/cards/: __init__.py  card_board.py  card_data.py  card_edit.py  card_panel.py  card_roads.py  card_select.py  card_view.py  cards_frame.py
witchcrafted/project/: __init__.py  project_data.py  project_view.py
witchcrafted/view/: card_edit.kv  card_panel.kv  card_view.kv  file_dialogs.kv  project_view.kv  settings.json  witchcrafted.kv
