[tool.poetry]
name = "witchcrafted"
version = "0.1.0"
description = "Modding tool for Masterduel"
authors = ["QuantumEntangledAndy <sheepchaan@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
UnityPy = "^1.7.43"
docopt = "^0.6.2"
tk = "^0.1.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "witchcrafted:app"
