[tool.poetry]
name = "witchcrafted"
version = "0.1.0"
description = "Modding tool for Masterduel"
authors = ["QuantumEntangledAndy <sheepchaan@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
UnityPy = "^1.7.43"
docopt = "^0.6.2"
PyYAML = "^6.0"
pandas = "^1.4.1"
asyncio = "^3.4.3"
Kivy = {extras = ["base"], version = "^2.1.0"}
colorlog = "^6.6.0"
colorama = "^0.4.4"
Pillow = "^9.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "witchcrafted:app"
